Pagination/Comments fix

--- a/Blog.WEB/appsettings.json
+++ b/Blog.WEB/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Myblog;Trusted_connection=true;MultipleActiveResultSets=true",
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=Myblog;Trusted_connection=true;MultipleActiveResultSets=true"
     
   },
   "AppSettings": {
