--- a/Blog/Blog.DAL.csproj
+++ b/Blog/Blog.DAL.csproj
@@ -31,6 +31,7 @@
   <ItemGroup>
     <Folder Include="Data\Migrations\" />
     <Folder Include="wwwroot\content\" />
+    <Folder Include="wwwroot\content\blog\" />
   </ItemGroup>
 
   <ItemGroup>
